--- a/style.css
+++ b/style.css
@@ -1,3 +1,114 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 body {
+    font-family: 'Poppins';
+    background-image: url(./images/bg-intro-desktop.png);
     background-color: hsl(0, 100%, 74%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    font-size: 16px;
+    
+}
+main {
+    width: 1440px;
+    display: flex;
+    width: 1440px;
+    margin-left: 40px;
+}
+.Description {
+    color: white;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.Form {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-left: 90px;
+        
+}
+.Offer {
+    background-color: hsl(248, 32%, 49%);
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    margin: 15px 0;
+    text-align: center;
+    box-shadow: 0px 5px rgba(0, 0, 0, 0.237);
+    font-weight: 400;
+
+}
+.Inputs {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 5px rgba(0, 0, 0, 0.477);
+}
+form {
+    display: flex;
+    flex-direction: column;
+}
+input {
+    margin: 7px 0;
+    padding: 15px;
+    border-radius: 5px;
+}
+.submit {
+    margin: 15px 0;
+    padding: 10px;
+    border-radius: 5px;
+    background-color:  hsl(154, 59%, 51%);
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+}
+.terms {
+    color: hsla(0, 0%, 31%, 0.475);
+}
+.terms a {
+    color: hsl(0, 100%, 74%);
+}
+span {
+    font-weight: 700;
+}
+footer {
+    position: absolute;
+    bottom: 10px;
+}
+@media only screen and (max-width: 600px) {
+    body {
+        background-image: url(./images/bg-intro-mobile.png);
+        display: flex;
+        flex-direction: column;
+    }
+    main {
+        width: 350px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0;
+        padding: ;
+        text-align: center;
+
+        }
+    .Description {
+            width: 100%;
+        }
+    .Form {
+            width: 100%;
+            margin: 0pc;
+        }
+    footer {
+        padding: 20px;
+        position: relative;
+        bottom: 0px;
+    }
 }
